SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Bonus__c.field-meta.xml
<CustomField>
        <fullName>Bonus__c</fullName>
        <inlineHelpText>% bonus on total product orders if quantity is met</inlineHelpText>
        <label>Bonus</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>