SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipName>Bonus_Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>