SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Buy_Quantity__c.field-meta.xml
<CustomField>
        <fullName>Buy_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bottles</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>