SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Buy_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Buy_Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </CustomField>