SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </CustomField>