SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Label__c.field-meta.xml
<CustomField>
        <fullName>Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipName>Bonus_Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>