SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Maximum_Bonus__c.field-meta.xml
<CustomField>
        <fullName>Maximum_Bonus__c</fullName>
        <label>Maximum Bonus %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>