SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Program__c.field-meta.xml
<CustomField>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>gvp__Program__c</referenceTo>
        <relationshipName>Bonus_Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>