SFUSA/force-app/main/default/objects/Bonus_Agreement__c/fields/Segment__c.field-meta.xml
<CustomField>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>gvp__Account_Segment__c</referenceTo>
        <relationshipName>Bonus_Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>