SFUSA/force-app/main/default/objects/Bonus_Agreement__c/listViews/Expired.listView-meta.xml
<ListView>
        <fullName>Expired</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Bonus__c</columns>
        <columns>Maximum_Bonus__c</columns>
        <columns>Buy_Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired</label>
    </ListView>